--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "SMTP server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "SMTP server to send email from your apps via your prepared server",
+  "main": "./src/app.ts",
   "scripts": {
-    "start": "nodemon ./src/app.js"
+    "development": "cross-env NODE_ENV=development nodemon --esm --files ./src/app.ts",
+    "production": "cross-env NODE_ENV=production node ./dist/app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "type": "module",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "eslint": "^8.56.0",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-validator": "^7.0.1",
@@ -27,12 +26,14 @@
     "mysql2": "^3.9.1",
     "nestjs": "^0.0.1",
     "pg": "^8.11.3",
+    "pino": "^8.19.0",
     "prisma": "^5.9.1",
     "pug": "^3.0.2",
     "sequelize": "^6.36.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -52,12 +53,26 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
     "cross-env": "^7.0.3",
+    "eslint": "^8.56.0",
     "fastify-cli": "^6.1.0",
     "nodemon": "^3.0.3",
     "prettier": "^3.2.4",
+    "pino-pretty": "^10.3.1",
     "sequelize-cli": "^6.6.2",
     "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
-  }
+  },
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "author": "Yunus Ashyrov <contact@yunus-mil.ru> (https://github.com/yunusmi)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yunusmi/smtp_server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yunusmi/smtp_server/issues"
+  },
+  "homepage": "https://github.com/yunusmi/smtp_server#readme"
 }
