--- a/.github/workflows/vps_server_production.yml
+++ b/.github/workflows/vps_server_production.yml
@@ -18,6 +18,7 @@ jobs:
           PRIVATE_KEY: ${{secrets.PROD_KEY}}
           HOSTNAME: ${{secrets.PROD_HOST}}
           USER_NAME: ${{secrets.PROD_USER}}
+          SMTP_DEPLOYMENT_KEY: ${{secrets.SMTP_DEPLOYMENT_KEY}}
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
