--- a/.github/workflows/vps_server_production.yml
+++ b/.github/workflows/vps_server_production.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Run commands on remote VPS server
         env:
-          PRIVATE_KEY: ${{secrets.PROD_KEY}}
+          PRIVATE_KEY: ${{secrets.PRIVATE_KEY}}
           HOSTNAME: ${{secrets.PROD_HOST}}
           USER_NAME: ${{secrets.PROD_USER}}
           SMTP_DEPLOYMENT_KEY: ${{secrets.SMTP_DEPLOYMENT_KEY}}
