--- a/package.json
+++ b/package.json
@@ -1,78 +1,70 @@
 {
-  "name": "sms_server",
+  "name": "smtp_server",
   "version": "1.0.0",
-  "description": "SMTP server to send email from your apps via your prepared server",
-  "main": "./src/app.ts",
-  "scripts": {
-    "development": "cross-env NODE_ENV=development nodemon --esm --files ./src/app.ts",
-    "production": "cross-env NODE_ENV=production node ./dist/app.js"
-  },
-  "type": "module",
+  "description": "",
+  "author": "",
+  "private": true,
   "license": "MIT",
+  "scripts": {
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
   "dependencies": {
-    "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "express-jwt": "^8.4.1",
-    "express-validator": "^7.0.1",
-    "fastify": "^4.26.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.9.1",
-    "nestjs": "^0.0.1",
-    "pg": "^8.11.3",
-    "pino": "^8.19.0",
-    "prisma": "^5.9.1",
-    "pug": "^3.0.2",
-    "sequelize": "^6.36.0",
-    "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.0",
-    "uuid": "^9.0.1",
-    "winston": "^3.11.0"
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "dotenv": "^16.4.5",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/register": "^7.23.7",
-    "@nestjs/cli": "^10.3.0",
-    "@prisma/client": "^5.9.1",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21",
-    "@types/express-unless": "^2.0.1",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.11.16",
-    "@types/sequelize": "^4.28.20",
-    "@types/swagger-ui-express": "^4.1.6",
-    "@types/uuid": "^9.0.8",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
-    "fastify-cli": "^6.1.0",
-    "nodemon": "^3.0.3",
-    "prettier": "^3.2.4",
-    "pino-pretty": "^10.3.1",
-    "sequelize-cli": "^6.6.2",
-    "supertest": "^6.3.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/supertest": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
   },
-  "engines": {
-    "node": ">=12.0.0"
-  },
-  "author": "Yunus Ashyrov <contact@yunus-mil.ru> (https://github.com/yunusmi)",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yunusmi/smtp_server.git"
-  },
-  "bugs": {
-    "url": "https://github.com/yunusmi/smtp_server/issues"
-  },
-  "homepage": "https://github.com/yunusmi/smtp_server#readme"
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  }
 }
